# marginaleffectsAD

./: CLAUDE.md  LICENSE.md  Makefile  NEWS.md  README.md  example.R  example.py  examples_standalone.py  pyproject.toml
estimation/: __init__.py  linear.py  logit.py  utils.py
marginaleffectsAD/: __init__.py  comparisons.py  summary.py  utils.py
marginaleffectsAD/glm/: comparisons.py  families.py  predictions.py
marginaleffectsAD/linear/: comparisons.py  predictions.py
marginaleffectsAD/logit/: __init__.py  predictions.py
marginaleffectsAD/poisson/: __init__.py  predictions.py
marginaleffectsAD/probit/: __init__.py  predictions.py
marginaleffectsJAX/: __init__.py
marginaleffectsJAX/linear/: __init__.py  comparisons.py
marginaleffectsJAX/logit/: __init__.py  comparisons.py  predictions.py
marginaleffectsJAX/poisson/: __init__.py  comparisons.py  predictions.py
marginaleffectsJAX/probit/: __init__.py  comparisons.py  predictions.py
