[project]
name = "pymarginaleffectsjax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "formulaic>=1.2.0",
    "ipython>=9.4.0",
    "jax>=0.7.1",
    "marginaleffects>=0.1.3",
    "numpy>=2.3.2",
    "polars>=1.32.3",
    "statsmodels>=0.14.5",
]
