[project]
name = "marginaleffectsAD"
version = "0.0.2"
description = "Automatic differentiation helpers for the marginaleffects package."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.7.1",
    "numpy>=2.3.2",
]

[dependency-groups]
dev = [
    "formulaic>=1.2.0",
    "ipython>=9.4.0",
    "marginaleffects>=0.1.3",
    "numpy>=2.3.2",
    "polars>=1.32.3",
    "ruff>=0.12.11",
    "statsmodels>=0.14.5",
]
